refactor: 重构项目配置并添加webpack支持
更新tsconfig.json以支持浏览器环境
添加webpack配置用于构建前端应用
修改package.json脚本以使用webpack
调整HTML和CSS样式

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="config-item">
                             <label for="rpcUrl">Chain RPC URL:</label>
-                            <input type="text" id="rpcUrl" placeholder="https://sepolia.infura.io/v3/...">
+                            <input type="text" id="rpcUrl" placeholder="https://testnet.hsk.xyz" value="https://testnet.hsk.xyz">
                         </div>
                     </div>
                     <div class="config-row">
@@ -179,6 +179,5 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-    <script type="module" src="app.js"></script>
 </body>
 </html>
